chg: Added cover date column on missing issues page

--- a/read_comics/missing_issues/templates/missing_issues/issues_table.html
+++ b/read_comics/missing_issues/templates/missing_issues/issues_table.html
@@ -12,6 +12,7 @@
       <tr class="publisher-row bg-primary bg-light">
         <td class="pl-1"><a href="{{ missing_issue.publisher_comicvine_url }}"
                             target="_blank">{{ missing_issue.publisher_name }}</a></td>
+        <td></td>
         <td class="pl-1"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                                title="Copy">{{ missing_issue.publisher_space_path }}</span></td>
         <td>
@@ -34,6 +35,7 @@
         <td class="pl-3"><a href="{{ missing_issue.volume_comicvine_url }}"
                             target="_blank">{{ missing_issue.volume_name }} ({{ missing_issue.volume_start_year }})</a>
         </td>
+        <td></td>
         <td class="pl-3"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                                title="Copy">{{ missing_issue.volume_space_path }}</span></td>
         <td>
@@ -54,6 +56,7 @@
     {% endifchanged %}
     <tr class="issue-row">
       <td class="pl-5"><a href="{{ missing_issue.comicvine_url }}" target="_blank">{{ missing_issue }}</a></td>
+      <td>{{ missing_issue.cover_date }}</td>
       <td class="pl-5"><span class="space-path cursor-pointer" data-toggle="tooltip" data-placement="bottom"
                              title="Copy">{{ missing_issue.issue_space_path }}</span></td>
       <td>
