chg: New ordering and group breaking in issues and volumes sublists

--- a/read_comics/characters/templates/characters/detail.html
+++ b/read_comics/characters/templates/characters/detail.html
@@ -153,7 +153,7 @@
                        href="#team-enemies"
                        aria-controls="team-enemies" role="tab" aria-selected="false">
                       <i class="fad fa-users" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Team enemies</span><span
-                      class="ml-1 badge badge-pill badge-round badge-danger">{{ team_friends_count|intcomma }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ team_enemies_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -380,7 +380,7 @@
         <div class="tab-pane fade badge-tab" id="issues" aria-labelledby="issues-tab" role="tabpanel">
           <h3>Issues</h3>
           <div class="tab-content">
-            {% include "blocks/detail/badges.html" with objects=issues_first_page.object_list pages=issues_pages get_page_function="getIssuesPage" url_template_name="characters/badges_urls/issue.html" %}
+            {% include "blocks/detail/badges.html" with objects=issues_first_page.object_list pages=issues_pages get_page_function="getIssuesPage" url_template_name="characters/badges_urls/issue.html" break_groups=True %}
           </div>
         </div>
         <!-- issues tab ends -->
@@ -391,7 +391,7 @@
         <div class="tab-pane fade badge-tab" id="volumes" aria-labelledby="volumes-tab" role="tabpanel">
           <h3>Volumes</h3>
           <div class="tab-content">
-            {% include "blocks/detail/badges.html" with objects=volumes_first_page.object_list pages=volumes_pages get_page_function="getVolumesPage" %}
+            {% include "blocks/detail/badges.html" with objects=volumes_first_page.object_list pages=volumes_pages get_page_function="getVolumesPage" break_groups=True %}
           </div>
         </div>
         <!-- volumes tab ends -->
